--- a/menu.css
+++ b/menu.css
@@ -1,1 +1,70 @@
-
+*{
+    margin:0;
+    padding:0;
+}
+header{
+    text-align: center;
+    background-color: rgb(41 52 61);
+    color: white;
+    padding: 20px 0;
+    height: auto;
+}
+body{
+    background-color: #f9f5f0;
+}
+h1{
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+h2{
+    margin-top: 20px;
+    margin-left: 50px;
+}
+footer{
+    text-align: center;
+    background-color: rgb(41 52 61);
+    color: white;
+    padding: 20px 0;
+}
+main{
+    padding: 20px;
+}
+section{
+    display: inline-flex;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.menu-item{
+    width: 350px;
+    height: 400px;
+    padding: 20px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 25px;
+    display: inline-flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+}
+img{
+    width:100%;
+    height: 50%;
+    border-radius: 25px;
+}
+span{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+button{
+    color: white;
+    background-color: #27a674;
+    border-radius: 6px;
+    width: 100px;
+    height: 100%;
+}
+button:hover{
+    background-color: #218c5c;
+}
