--- a/menu.css
+++ b/menu.css
@@ -5,20 +5,40 @@
 header{
     text-align: center;
     background-color: rgb(41 52 61);
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 20px 0;
     height: auto;
+    position: relative;
+    z-index: 1;
+}
+header::before{
+    content: "";
+    position:absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: contain;
+    background-position: center;
+    background-image: url(images/background.jpg);
+    opacity:0.9;
+    z-index: -1;
 }
 body{
     background-color: #f9f5f0;
 }
 h1{
+    text-align: center;
     font-size: 2.5em;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 h2{
+    text-align: center;
+    font-size: 2em;
     margin-top: 20px;
     margin-left: 50px;
+    margin-bottom: 20px;
+    text-decoration: underline black;    
 }
 footer{
     text-align: center;
