--- a/index.css
+++ b/index.css
@@ -1,8 +1,42 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+    padding: 20px;
+    font-family: Josefin Sans,sans-serif;
+    font-weight: 500;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    background-color: inherit;
+}
+main{
+    background-color: rgb(254, 250, 245)
+}
+nav{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: rgb(36, 34, 30); */
+    /* background: linear-gradient(#24221e, #565040); */
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(36,34,30,1) 50%, rgba(0,212,255,1) 100%);
+    border:2px solid black;
+    border-radius: 15px;
+}
 footer{
-    /* height: auto; */
-    width: auto;
-    background-color: #131A22;
+    text-align: center;
+    background-color: rgb(41 52 61);
+    color: white;
+    padding: 20px 0;
 }
 header{
-    color: pink;
+    padding: 5px 10px 5px 10px;
+    top: 0.1px;
+    position: sticky;
 }
