--- a/index.css
+++ b/index.css
@@ -22,12 +22,20 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    gap: 20px;
     /* background-color: rgb(36, 34, 30); */
     /* background: linear-gradient(#24221e, #565040); */
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(36,34,30,1) 50%, rgba(0,212,255,1) 100%);
     border:2px solid black;
     border-radius: 15px;
+}
+nav img{
+    position: absolute;
+    left: 10px;
+    height: 100%;
+    margin-left: 20px;
 }
 footer{
     text-align: center;
