--- a/menu.css
+++ b/menu.css
@@ -38,7 +38,7 @@ h2{
     margin-top: 20px;
     margin-left: 50px;
     margin-bottom: 20px;
-    text-decoration: underline black;    
+    /* text-decoration: underline black; */
 }
 footer{
     text-align: center;
@@ -61,7 +61,7 @@ section{
     height: 400px;
     padding: 20px;
     margin: 10px;
-    border: 2px solid black;
+    border: 2px solid rgb(43, 33, 33);
     border-radius: 25px;
     display: inline-flex;
     justify-content: space-evenly;
@@ -79,13 +79,21 @@ span{
     align-items: center;
     width: 100%;
 }
+h4{
+    font-size: 18px;
+}
 button{
     color: white;
     background-color: #27a674;
     border-radius: 6px;
     width: 100px;
-    height: 100%;
+    height: 35px;
+    font-size: 16px;
 }
 button:hover{
     background-color: #218c5c;
+}
+.menu-item:hover{
+    transition: ;
+    box-shadow: 2px 2px 10px rgb(43, 33, 33);
 }
