--- a/index.css
+++ b/index.css
@@ -17,8 +17,8 @@ main{
     background-color: rgb(254, 250, 245)
 }
 nav{
-    width: 100%;
-    height: 80px;
+    /* width: 100%;
+    height: 80px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,4 +47,7 @@ header{
     padding: 5px 10px 5px 10px;
     top: 0.1px;
     position: sticky;
+}
+.bg{
+    background-image: ;
 }
