--- a/index.css
+++ b/index.css
@@ -49,5 +49,10 @@ header{
     position: sticky;
 }
 .bg{
-    background-image: ;
+    background-image: url(images/bg.webp);
+    z-index: -10;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    opacity: 0.6;
 }
