--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ header{
     padding: 5px 10px 5px 10px;
     top: 0.1px;
     position: sticky;
+    z-index: 10;
 }
 .bg{
     background-image: url(images/bg.webp);
@@ -54,5 +55,46 @@ header{
     width: 100%;
     height: 100vh;
     background-size: cover;
-    opacity: 0.6;
+    opacity: 0.7;
+}
+.bg h1{
+    font-family: Josefin Sans,sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 3em;
+    padding: 50px;
+    position: relative;
+    top: 50px;
+    animation: fadeIn 0.5s forwards;
+}
+.contact_us{
+    text-align: center;
+    font-size: 1.1em;
+    line-height: 1.75em;
+    padding: 25px;
+}
+.contact_us h2{
+    font-size: 2.5em;
+    padding-bottom: 20px;
+}
+.contact_us p{
+    font-size: 1.2em;
+}
+.contact_us h4{
+    font-size: 1.2em;
+}
+.details{
+    background-color: rgb(238 239 241);
+    display: flex;
+    text-align: left;
+    flex-direction: row;
+    align-items: center;
+    padding: 32px;
+    padding-left: 200px;
+    padding-right: 200px;
+    margin: 50px;
+    justify-content: space-between;
+    border-radius: 0.5em;
+}
+.details div h3{
+    padding-bottom: 10px;
 }
