--- a/index.css
+++ b/index.css
@@ -98,3 +98,13 @@ header{
 .details div h3{
     padding-bottom: 10px;
 }
+.lilita-one-regular {
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.bebas-neue{
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
