--- a/menu.css
+++ b/menu.css
@@ -2,7 +2,46 @@
     margin:0;
     padding:0;
 }
+a{
+    text-decoration: none;
+    padding: 20px;
+    font-family: Josefin Sans,sans-serif;
+    font-weight: 500;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    background-color: inherit;
+}
 header{
+    padding: 5px 10px 5px 10px;
+    top: 0.1px;
+    position: sticky;
+    z-index: 10;
+}
+nav{
+    /* width: 100%;
+    height: 80px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    gap: 20px;
+    /* background-color: rgb(36, 34, 30); */
+    /* background: linear-gradient(#24221e, #565040); */
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(36,34,30,1) 50%, rgba(0,212,255,1) 100%);
+    border:2px solid black;
+    border-radius: 15px;
+}
+nav img{
+    position: absolute;
+    left: 10px;
+    width: auto;
+    height: 100%;
+    margin-left: 20px;
+}
+/* header{
     text-align: center;
     background-color: rgb(41 52 61);
     color: rgb(255, 255, 255);
@@ -23,7 +62,7 @@ header::before{
     background-image: url(images/background.jpg);
     opacity:0.9;
     z-index: -1;
-}
+} */
 body{
     background-color: #f9f5f0;
 }
@@ -38,7 +77,6 @@ h2{
     margin-top: 20px;
     margin-left: 50px;
     margin-bottom: 20px;
-    /* text-decoration: underline black; */
 }
 footer{
     text-align: center;
