--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -50,7 +50,7 @@ header{
     z-index: 10;
 }
 .bg{
-    background-image: url(images/bg.webp);
+    background-image: url(bg.webp);
     z-index: -10;
     width: 100%;
     height: 100vh;
