--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,15 +12,15 @@
 <body>
     <header>
         <nav>
-            <img src="images/logo.png" style="justify-content: left;">
+            <img src="logo.png" style="justify-content: left;">
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="menu.html">Menu</a>
-                <a href="offers.html">Offers</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="cart.html">Cart</a>
-                <a href="login.html">Logout</a>
+                <a href= "/home">Home</a>
+                <a href="/menu">Menu</a>
+                <a href="/offers">Offers</a>
+                <a href="/contact">Contact Us</a>
+                <a href="/about">About</a>
+                <a href="/cart">Cart</a>
+                <a href="/">Logout</a>
             </div>
             <!-- <div id="floatRight">
                 <a href="cart.html">Cart</a>
