--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,6 +6,7 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <%- include("includes/navBar.ejs") %>
     <form action="#">
         <input type="text" placeholder="Name">
 
@@ -15,5 +16,6 @@
         <br>
         <textarea placeholder="Comments"></textarea>
     </form>
+    <%- include("includes/footer.ejs") %>
 </body>
 </html>
