--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -10,5 +10,6 @@
     <button id="payBtn">Pay ₹1</button>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="payment.js"></script>
+    <%- include("includes/footer.ejs") %>
 </body>
 </html>
