--- a/public/CSS/cart.css
+++ b/public/CSS/cart.css
@@ -68,3 +68,19 @@ nav a {
     font-size: 1rem;
     cursor: pointer;
 }
+button.logout-btn.nav-links {
+    all: unset; /* removes all default button styles */
+    cursor: pointer;
+    padding: 20px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 500;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    background-color: inherit;
+}
+
+button.logout-btn.nav-links:hover {
+    text-decoration: underline;
+}
