--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,54 +10,20 @@
     <title>About-DineFlow</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <img src="logo.png" style="justify-content: left;">
-            <a href= "/home">Home</a>
-            <a href="/menu">Menu</a>
-            <a href="/offers">Offers</a>
-            <a href="/about">About</a>
-            <a href="/cart">Cart</a>
-            <a href="/">Logout</a>
-        </nav>
-    </header>
+    <%- include("includes/navBar.ejs") %>
     <main>
         <div>
-            <div class="container">
-                <div class="text">
-                    <h1 class="noto-sansH">We are DineFlow</h1>
-                    <p class="noto-sansP">A smart and dynamic restaurant management system. Seamless ordering, efficient operations, and enhanced dining experiences.</p>             
+            <% for(about of results) { %>
+                <div class="container">
+                    <div class="text">
+                        <h1 class="noto-sansH"> <%= about.title %> </h1>
+                        <p class="noto-sansP"> <%= about.description %> </p>             
+                    </div>
+                    <img class="image" src="<%= about.image %>" alt="<%= about.title %>">
                 </div>
-                <img class="image" src="dine.jpg" alt="DineFlow">
-            </div>
-            <div class="container">
-                <div class="text">
-                    <h1 class="noto-sansH">Innovation in Dining</h1>
-                    <p class="noto-sansP">We revolutionize restaurant management with cutting-edge technology, ensuring smooth service, real-time analytics, and customer satisfaction.</p>
-                </div>
-                <img class="image" src="innovation.jpg" alt="Innovation">
-            </div>
-            <div class="container">
-                <div class="text">
-                    <h1 class="noto-sansH">Empowering Restaurants</h1>
-                    <p class="noto-sansP">From digital menus and automated order management to real-time analytics and seamless payments, we help restaurants optimize operations and enhance guest experiences. DineFlow ensures everything flows effortlessly.</p>
-                </div>
-                <img class="image" src="empowering_restaurants.webp" alt="Empowering Restaurants">
-            </div>
-            <div class="container">
-                <div class="text">
-                    <h1 class="noto-sansH">Shaping the Future of Dining</h1>
-                    <p class="noto-sansP">With a commitment to efficiency and innovation, we're redefining how restaurants operate—where technology meets taste, and every meal is a delightful experience. We empower restaurants to deliver exceptional service.</p>
-                </div>
-                <img src="future.jpg" alt="Future of Dining">
-            </div>
+            <% } %>
         </div>
     </main>
-    <footer>
-        <div>
-            <h3>&copy; 2025 DineFlow. All Rights Reserved.</h3>
-            <h3>Created by- <b>Parv Tiwari</b></h3>
-        </div>
-    </footer>
+    <%- include("includes/footer.ejs") %>
 </body>
 </html>
