--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -6,18 +6,8 @@
     <link rel="stylesheet" href="cart.css">
 </head>
 <body>
-<header>
-    <nav>
-        <div><a href="/home">DineFlow</a></div>
-        <div>
-            <a href="/menu">Menu</a>
-            <a href="/cart">Cart</a>
-            <a href="/">Logout</a>
-        </div>
-    </nav>
-</header>
-
-<div class="cart-container">
+    <%- include("includes/navBar.ejs") %>
+    <div class="cart-container">
     <h2>Your Cart</h2>
 
     <% if (cartItems.length === 0) { %>
@@ -48,5 +38,6 @@
         </form>
     <% } %>
 </div>
+    <%- include("includes/footer.ejs") %>
 </body>
 </html>
